# rp2040-example

./: CMakeLists.txt  example_auto_set_url.cmake
src/: main.cpp
